[package]
name = "antisocial"
version = "0.1.0"
authors = ["Adrian Sampson <adrian@radbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
pretty_env_logger = "0.4"
activitystreams = "0.5.0-alpha.17"
serde_json = "1.0.51"
